--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 <body>
     <div class="wrapper">
+        <div class="panel">
+            <div class="gold">0</div>
+        </div>
         <div class="grid">
             <div class="cell"></div>
             <div class="cell"></div>
