--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <body>
     <div class="wrapper">
         <div class="panel">
+            <div class="character">
+                <span></span>
+            </div>
             <div class="gold">0</div>
         </div>
         <div class="grid">
