--- a/index.html
+++ b/index.html
@@ -7,25 +7,52 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=New+Tegomin&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="wrapper">
-        <div class="panel">
-            <div class="character">
-                <span></span>
+    <div class="container">
+        <div class="book__container">
+            <div class="book__head">
+                <div class="book__img">
+                    <img src="img/open-book.svg" alt="">
+                </div>
+                <h2 class="book__title">Мужской журнал: "Охота"</h2>
             </div>
-            <div class="gold">0</div>
+            <ul class="book__items">
+                <li class="book__item">
+                    <div class="book__img">
+                        <img src="img/orc.svg" alt="">
+                    </div>
+                    <h2 class="orc__title">Типичный фанат моргенштерна... и я имел ввиду булаву</h2>
+                </li>
+                <li class="book__item">
+                    <div class="book__img">
+                        <img src="img/ghost.svg" alt="">
+                    </div>
+                    <h2 class="orc__title">Этот парень ведет себя странно, к тому же зачем-то одел мой пододеяльник</h2>
+                </li>
+            </ul>
         </div>
-        <div class="grid">
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
+
+        <div class="wrapper">
+            <div class="panel">
+                <div class="character">
+                    <span></span>
+                </div>
+                <div class="gold">0</div>
+            </div>
+            <div class="grid">
+                <div class="cell"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+            </div>
         </div>
     </div>
 
