--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
+    <div class="container" onmousedown="return false">
         <div class="book__container">
             <div class="book__head">
                 <div class="book__img">
@@ -24,7 +24,7 @@
                     <div class="book__img">
                         <img src="img/orc.svg" alt="">
                     </div>
-                    <h2 class="orc__title">Типичный фанат моргенштерна... и я имел ввиду булаву</h2>
+                    <h2 class="orc__title">Типичный фанат моргенштерна...</h2>
                 </li>
                 <li class="book__item">
                     <div class="book__img">
