Добавил ледяного великана

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <div class="book__img">
                         <img src="img/ghost.svg" alt="">
                     </div>
-                    <h2 class="orc__title">Этот парень ведет себя странно, к тому же зачем-то одел мой пододеяльник</h2>
+                    <h2 class="orc__title">Этот парень ведет себя странно, к тому же зачем-то одел на себя пододеяльник</h2>
                 </li>
             </ul>
         </div>
