--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
                 <div class="book__img">
                     <img src="img/open-book.svg" alt="">
                 </div>
-                <h2 class="book__title">Мужской журнал: "Охота"</h2>
+                <h2 class="book__title">Бестиарий</h2>
             </div>
             <ul class="book__items">
                 <li class="book__item">
                     <div class="book__img">
                         <img src="img/orc.svg" alt="">
                     </div>
-                    <h2 class="orc__title">Типичный фанат моргенштерна...</h2>
+                    <h2 class="orc__title"></h2>
                 </li>
                 <li class="book__item">
                     <div class="book__img">
                         <img src="img/ghost.svg" alt="">
                     </div>
-                    <h2 class="orc__title">Этот парень ведет себя странно, к тому же зачем-то одел на себя пододеяльник</h2>
+                    <h2 class="orc__title"></h2>
                 </li>
             </ul>
         </div>
