Сделал модальное окно Game over

--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
 <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="modalGameOver">
+        <div class="modal">
+            <h2>Game over!</h2>
+            <p>Restart?</p>
+            <div class="ansver">
+                <button class="yes">Yes</button>
+                <button class="yes">Yeeees!!!</button>
+            </div>
+        </div>
+    </div>
     <div class="container" onmousedown="return false">
         <div class="book__container">
             <div class="book__head">
