--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="wrapper">
             <div class="panel">
                 <div class="character">
-                    <span></span>
+                    <span>10</span>
                 </div>
                 <div class="gold">0</div>
             </div>
