--- a/index.html
+++ b/index.html
@@ -21,8 +21,17 @@
             </div>
         </div>
     </div>
+    <div class="modalRulesContainer">
+        <div class="modalRules">
+            <h2>Управление</h2>
+            <p>Вы можете перемещать героя стрелками на клавиатуре, а также свайпать курсором в области игрового поля.</p>
+            <div class="ansver">
+                <button class="btn_rules">Хорошо</button>
+            </div>
+        </div>
+    </div>
     <div class="container" onmousedown="return false">
-        <div class="book__container">
+        <!-- <div class="book__container">
             <div class="book__head">
                 <div class="book__img">
                     <img src="img/open-book.svg" alt="">
@@ -43,7 +52,7 @@
                     <h2 class="orc__title"></h2>
                 </li>
             </ul>
-        </div>
+        </div> -->
 
         <div class="wrapper">
             <div class="panel">
@@ -51,6 +60,7 @@
                     <span>10</span>
                 </div>
                 <div class="gold">0</div>
+                <div class="rules">? Управление</div>
             </div>
             <div class="grid">
                 <div class="cell"></div>
